force-app/main/default/objects/KPIapp__Partner_Settings__c/KPIapp__Partner_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Partner Settings</label>
</CustomObject>