force-app/main/default/objects/KPIapp__Partner_Settings__c/fields/KPIapp__Announcement_Banner_Url__c.field-meta.xml
<CustomField>
    <fullName>KPIapp__Announcement_Banner_Url__c</fullName>
    <label>Announcement Banner Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>