force-app/main/default/objects/KPIapp__Partner_Settings__c/fields/KPIapp__Connected_App_Secret__c.field-meta.xml
<CustomField>
    <fullName>KPIapp__Connected_App_Secret__c</fullName>
    <label>Connected App Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>