force-app/main/default/objects/KPIapp__Partner_Settings__c/fields/KPIapp__Integration_Id__c.field-meta.xml
<CustomField>
    <fullName>KPIapp__Integration_Id__c</fullName>
    <label>Integration Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>