force-app/main/default/objects/KPIapp__Partner_Settings__c/fields/KPIapp__Partner_Community_Url__c.field-meta.xml
<CustomField>
    <fullName>KPIapp__Partner_Community_Url__c</fullName>
    <label>Partner Community Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>