force-app/main/default/objects/KPIapp__Partner_Settings__c/fields/KPIapp__Publisher_Org_Domain__c.field-meta.xml
<CustomField>
    <fullName>KPIapp__Publisher_Org_Domain__c</fullName>
    <label>Publisher Org Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>