force-app/main/default/objects/KPIapp__Partner_Settings__c/fields/KPIapp__Use_Instance_Url__c.field-meta.xml
<CustomField>
    <fullName>KPIapp__Use_Instance_Url__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Instance Url</label>
    <type>Checkbox</type>
</CustomField>